--- a/data/interfaces/default/config_general.tmpl
+++ b/data/interfaces/default/config_general.tmpl
@@ -186,6 +186,17 @@
                                 <span class="component-desc">Used to give 3rd party programs limited access to Sick-Beard.</span>
                             </label>
                         </div>
+                        <div class="field-pair">
+                            <label class="nocheck clearfix" for="friend_key">
+                                <span class="component-title">Friend Key</span>
+                                <input type="text" name="friend_key" id="friend_key" value="$sickbeard.FRIEND_KEY" size="35" readonly="readonly" />
+                                <input type="button" class="btn" id="generate_new_friendkey" value="Generate">
+                            </label>
+                            <label class="nocheck clearfix">
+                                <span class="component-title">&nbsp;</span>
+                                <span class="component-desc">Used to give 3rd party programs limited access to Sick-Beard.</span>
+                            </label>
+                        </div>
                         </div>
 
                         <input type="submit" class="btn config_submitter" value="Save Changes" />
